# bWidgets

./: .clang-format  .gitignore  .gitmodules  Builder_8cc.html  Builder_8cc__incl.map  Builder_8cc__incl.md5  Builder_8h.html  Builder_8h__dep__incl.map  Builder_8h__dep__incl.md5  Builder_8h__incl.map  Builder_8h__incl.md5  Builder_8h_source.html  CMakeLists.txt  Drawer_8cc.html  Drawer_8cc__incl.map  Drawer_8cc__incl.md5  Drawer_8h.html  Drawer_8h__dep__incl.map  Drawer_8h__dep__incl.md5  Drawer_8h__incl.map  Drawer_8h__incl.md5  Drawer_8h_source.html  EventHandler_8cc.html  EventHandler_8cc__incl.map  EventHandler_8cc__incl.md5  EventHandler_8h.html  EventHandler_8h.js  EventHandler_8h__dep__incl.map  EventHandler_8h__dep__incl.md5  EventHandler_8h__incl.map  EventHandler_8h__incl.md5  EventHandler_8h_source.html  Iterators_8cc.html  Iterators_8cc.js  Iterators_8cc__incl.map  Iterators_8cc__incl.md5  Iterators_8h.html  Iterators_8h.js  Iterators_8h__dep__incl.map  Iterators_8h__dep__incl.md5  (+1003 more)
bwidgets/: ActionButtonWidget.cc  ActionButtonWidget.h  CMakeLists.txt  COPYING  Label.cc  Label.h  Painter.cc  Painter.h  PushButton.cc  PushButton.h  RadioButton.cc  RadioButton.h  ShaderProgram.cc  ShaderProgram.h  Style.cc  Style.h  StyleManager.cc  StyleManager.h  Widget.cc  Widget.h  bWidgets.cc  bWidgets.h  bwAbstractButton.cc  bwAbstractButton.h  bwContext.h  bwEvent.cc  bwEvent.h  bwEventDispatcher.cc  bwEventDispatcher.h  bwIconInterface.h  bwLabel.cc  bwLabel.h  bwLayoutInterface.h  bwPaintEngine.h  bwPainter.cc  bwPainter.h  bwPushButton.cc  bwPushButton.h  bwRadioButton.cc  bwRadioButton.h  (+18 more)
bwidgets/data_binding/: Binding.h  TypeErasedBinding.h
bwidgets/generics/: CMakeLists.txt  Color.cc  Color.h  Gradient.cc  Gradient.h  Point.cc  Polygon.cc  Rectangle.cc  bwColor.cc  bwColor.h  bwDistance.h  bwFunctorInterface.h  bwGradient.cc  bwGradient.h  bwPoint.cc  bwPoint.h  bwPolygon.cc  bwPolygon.h  bwRange.cc  bwRange.h  bwRectangle.cc  bwRectangle.h  bwUtil.h
bwidgets/screen_graph/: Builder.cc  Builder.h  Constructor.cc  Constructor.h  Drawer.cc  Drawer.h  EventHandler.cc  EventHandler.h  Iterators.cc  Iterators.h  Node.cc  Node.h  PersistentPtr.cc  PersistentPtr.h  PersistentRef.cc  PersistentRef.h  ScreenGraph.h
bwidgets/style_properties/: CMakeLists.txt  bwStyleProperties.cc  bwStyleProperties.h  bwStylePropertyType.cc  bwStylePropertyType.h  bwStyleStruct.cc  bwStyleStruct.h  bwStyleStructTypeMap.cc  bwStyleStructTypeMap.h  css_background.cc  css_background.h  css_border.cc  css_border.h  css_color.cc  css_color.h  css_custom_props.cc  css_custom_props.h
bwidgets/styles/: BlenderClassic.h  StyleBlenderClassic.cc  StyleBlenderClassic.h  StyleBlenderFlat.cc  StyleBlenderFlat.h  bwStyleBlenderClassic.cc  bwStyleBlenderClassic.h  bwStyleBlenderFlat.cc  bwStyleBlenderFlat.h  bwStyleClassic.cc  bwStyleClassic.h  bwStyleFlatDark.cc  bwStyleFlatDark.h  bwStyleFlatGrey.cc  bwStyleFlatGrey.h  bwStyleFlatLight.cc  bwStyleFlatLight.h
bwidgets/styling/: bwStyle.cc  bwStyle.h  bwStyleCSS.cc  bwStyleManager.cc  bwStyleProperties.cc  bwStyleProperties.h  bwWidgetBaseStyle.h
bwidgets/styling/styles/: bwStyleClassic.cc  bwStyleFlatDark.h  bwStyleFlatGrey.cc  bwStyleFlatGrey.h  bwStyleFlatLight.h
bwidgets/util/: Color.cc  Color.h  Gradient.cc  Point.cc  Point.h  Polygon.cc  Polygon.h  Rectangle.h
bwidgets/utils/: CMakeLists.txt  CREDITS.TXT  bwOptional.h  bwPointer.h  bwPtr.h  bwUtil.h
bwidgets/utils/internal/: bwOptional_internal.h
bwidgets/widgets/: CMakeLists.txt  builtin_widgets.h  bwAbstractButton.cc  bwAbstractButton.h  bwCheckbox.cc  bwCheckbox.h  bwContainerWidget.cc  bwContainerWidget.h  bwLabel.cc  bwLabel.h  bwNumberSlider.cc  bwNumberSlider.h  bwPanel.cc  bwPanel.h  bwPushButton.cc  bwPushButton.h  bwRadioButton.cc  bwRadioButton.h  bwScrollBar.cc  bwScrollBar.h  bwScrollView.cc  bwScrollView.h  bwTextBox.cc  bwTextBox.h  bwWidget.cc  bwWidget.h  bwWidgetState.h
demo/: Application.cc  Application.h  CMakeLists.txt  File.cc  File.h  Pixmap.cc  Pixmap.h  RNAProperty.h  RNAScreenGraphBuilder.h  bwidgets_demo.cc
demo/gpu/: CMakeLists.txt  GPU.h  GPUShader.cc  GPUShader.h  ShaderProgram.cc  ShaderProgram.h  gpu.cc  gpu_intern.h  gpu_matrix.cc
demo/gpu/shaders/: bitmap_texture_uniform_color_frag.glsl  pixel_alpha_mask_texture_uniform_color_frag.glsl  smooth_color_frag.glsl  smooth_color_vert.glsl  subpixel_alpha_mask_texture_uniform_color_frag.glsl  texture_frag.glsl  texture_vert.glsl  uniform_color_frag.glsl  uniform_color_vert.glsl
demo/resources/: blender_icon_defines.h  blender_icons.h  classic_style.css  flat_dark.css  flat_light.css
demo/screen/: CMakeLists.txt  DefaultStage.cc  DefaultStage.h  DefaultStageRNAFunctor.cc  DefaultStageRNAFunctor.h  DummyFunctors.hh  Font.cc  Font.h  GawainPaintEngine.cc  GawainPaintEngine.h  IconMap.cc  IconMap.h  Layout.cc  Layout.h  RNABinding.h  Stage.cc  Stage.h  StyleSheet.cc  StyleSheet.h  StyleSheetTree.cc  StyleSheetTree.h  WidgetIterator.cc  WidgetIterator.h  default_stage.cc  default_stage.h
demo/stylesheet/: CMakeLists.txt  PropertyParser.cc  PropertyParser.h  StyleSheet.cc  StyleSheet.h  StyleSheetTree.cc  StyleSheetTree.h
demo/utils/: CMakeLists.txt  FixedNum.cc  FixedNum.h
demo/window_manager/: CMakeLists.txt  Event.cc  Event.h  EventManager.cc  EventManager.h  Window.cc  Window.h  WindowManager.cc  WindowManager.h
doc/: Doxyfile  custom_stylesheet.css  doxy-boot.js  header.html  mainpage.dox
docs/: Doxyfile  README.md  build_instructions.md  bwidgets_vs_existing_toolkits.md  current_ui_code_vs_bwidgets.md  future_plans.md  index.html  local_index.html  mainpage.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  (+117 more)
tests/bWidgets/: CMakeLists.txt  bwPolygon_test.cc  bwStyleProperties_test.cc
tests/bWidgets/screen_graph/: Iterator_test.cc
tests/bWidgets/utils/bwOptional/: comparison_operators.cc  constructors.cc  destructor.cc  functions.cc  hash.cc  make_optional.cc  operators.cc  swap.cc
tests/demo/: CMakeLists.txt  WidgetIterator_test.cc
(+1065 files in other folders)
